extract/src/main/java/es/uniovi/asw/trivial/extractor/parser/y.output
   0  $accept : s $end

   1  s : elementos

   2  elementos : elementos elemento
   3            |

   4  elemento : categoria
   5           | pregunta

   6  categoria : CATEGORY

   7  pregunta : identificador TEXTO '{' respuestas '}'

   8  identificador : DOBLEPUNTO TEXTO DOBLEPUNTO
   9                |

  10  respuestas : respuestas respuesta
  11             | respuesta

  12  respuesta : simbolo TEXTO comentario

  13  comentario : '#' TEXTO
  14             |

  15  simbolo : '='
  16          | '~'

state 0
	$accept : . s $end  (0)
	elementos : .  (3)

	.  reduce 3

	s  goto 1
	elementos  goto 2


state 1
	$accept : s . $end  (0)

	$end  accept


state 2
	s : elementos .  (1)
	elementos : elementos . elemento  (2)
	identificador : .  (9)

	DOBLEPUNTO  shift 3
	CATEGORY  shift 4
	$end  reduce 1
	TEXTO  reduce 9

	elemento  goto 5
	categoria  goto 6
	pregunta  goto 7
	identificador  goto 8


state 3
	identificador : DOBLEPUNTO . TEXTO DOBLEPUNTO  (8)

	TEXTO  shift 9
	.  error


state 4
	categoria : CATEGORY .  (6)

	.  reduce 6


state 5
	elementos : elementos elemento .  (2)

	.  reduce 2


state 6
	elemento : categoria .  (4)

	.  reduce 4


state 7
	elemento : pregunta .  (5)

	.  reduce 5


state 8
	pregunta : identificador . TEXTO '{' respuestas '}'  (7)

	TEXTO  shift 10
	.  error


state 9
	identificador : DOBLEPUNTO TEXTO . DOBLEPUNTO  (8)

	DOBLEPUNTO  shift 11
	.  error


state 10
	pregunta : identificador TEXTO . '{' respuestas '}'  (7)

	'{'  shift 12
	.  error


state 11
	identificador : DOBLEPUNTO TEXTO DOBLEPUNTO .  (8)

	.  reduce 8


state 12
	pregunta : identificador TEXTO '{' . respuestas '}'  (7)

	'='  shift 13
	'~'  shift 14
	.  error

	respuestas  goto 15
	respuesta  goto 16
	simbolo  goto 17


state 13
	simbolo : '=' .  (15)

	.  reduce 15


state 14
	simbolo : '~' .  (16)

	.  reduce 16


state 15
	pregunta : identificador TEXTO '{' respuestas . '}'  (7)
	respuestas : respuestas . respuesta  (10)

	'}'  shift 18
	'='  shift 13
	'~'  shift 14
	.  error

	respuesta  goto 19
	simbolo  goto 17


state 16
	respuestas : respuesta .  (11)

	.  reduce 11


state 17
	respuesta : simbolo . TEXTO comentario  (12)

	TEXTO  shift 20
	.  error


state 18
	pregunta : identificador TEXTO '{' respuestas '}' .  (7)

	.  reduce 7


state 19
	respuestas : respuestas respuesta .  (10)

	.  reduce 10


state 20
	respuesta : simbolo TEXTO . comentario  (12)
	comentario : .  (14)

	'#'  shift 21
	'}'  reduce 14
	'='  reduce 14
	'~'  reduce 14

	comentario  goto 22


state 21
	comentario : '#' . TEXTO  (13)

	TEXTO  shift 23
	.  error


state 22
	respuesta : simbolo TEXTO comentario .  (12)

	.  reduce 12


state 23
	comentario : '#' TEXTO .  (13)

	.  reduce 13


10 terminals, 11 nonterminals
17 grammar rules, 24 states
